# tv_amor

./: .gitignore  Main.hs  README.md  TV.hs  config.json  config_smh.json  tvamor.cabal
Model/: AniAutoTask.hs  AudioInfo.hs  AudiosInfo.hs  Config.hs  Constants.hs  Episode.hs  EpisodeChar.hs  EpisodeComplete.hs  EpisodePersona.hs  EpisodeSetup.hs  GuidoLangUtil.hs  IOs.hs  JSONUtil.hs  MyModule.hs  Test.hs  Test2.hs  Test3.hs  TextUtil.hs  WorkingEpisode.hs  WorkingEpisode_bkp_atacadao.hs  WorkingEpisode_bkp_cacaushow.hs  WorkingEpisode_jean.hs
ModelGL/: Testando  create_video.py  episode.py  guido_responde.py  main_audio_helper.py  main_audios_info.py  main_audios_info_bkp.py  main_audios_info_test.py  main_create_video.py  main_narrador.py  main_pyautogui_coordenadas.py  main_search_voices_test.py  main_search_voices_test_2.py  main_search_voices_test_6.py  main_smh_auto_share  main_smh_auto_share.py  main_smh_auto_share_test.py  main_smh_auto_share_test2.py  main_smh_auto_share_test3.py  main_smh_auto_share_test_finders.py  main_test_ani_auto_task.py  main_test_log_atencao.py  main_test_read_image_size.py  main_video_subtitles.py  py_test3.py  test_paths_modules.py
outros_exemplos/: audio_v3.py  audio_v4.py
raciocinios/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13 prompt ani_auto_task.txt  14.txt  15.txt  16.txt  17 2025-08-19 CHATGPT.odt  17 2025-08-19 GEMINI.odt  17 2025-08-19.txt  18 estruta dos vídeos por livro 2025-08-21.txt  19 dinâmica audio.txt  20.txt  2025-08-29 Gestos, frequência na automação.txt  (+10 more)
(+73 files in other folders)
