cabal-version:       3.6
name:                tvamor
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
author:              Felipe Carmona Miquilini
maintainer:          felipe.miquilini@gmail.com

executable tv_amor-exe
    main-is:             Main.hs
    hs-source-dirs:      .
    -- other-modules:
    --     Model.Episode
    build-depends:       base >= 4.7 && < 5,
                        text,
                        bytestring,
                        unordered-containers,
                        process,
                        aeson
    default-language:    Haskell2010
