cabal-version:       3.6
name:                tvamor
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
author:              Felipe Carmona Miquilini
maintainer:          felipe.miquilini@gmail.com

executable tv_amor-exe
    main-is:             Main.hs
    hs-source-dirs:      .
    other-modules:
        Model.AniAutoTask
        Model.Constants
        Model.Episode
        Model.EpisodeComplete
        Model.EpisodePersona
        Model.EpisodeSetup
        Model.MyModule
        Model.Test
        Model.TextUtil
    build-depends:
        base >= 4.7 && < 5,
        text,
        bytestring,
        unordered-containers,
        process,
        aeson,
        filepath,
        directory,
        aeson-pretty
    default-language:    Haskell2010
